end project and add @media query

--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  line-height: 100%;
-  text-align: center;
   background-color: #f5f7ff;
 }
 
@@ -65,19 +63,21 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin: 20px 0;
-  font-weight: bold;
-  font-size: 32px;
+  margin: 40px 0;
+  font-weight: 700;
+  font-size: 28px;
 }
 
 .main__article {
+  font-size: 16px;
+  font-weight: 500;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
   text-align: center;
   width: 60%;
   color: gray;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .main__footer-on-main {
@@ -105,7 +105,11 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 20px;
+  margin: 0 30px;
+}
+
+.main__img {
+  height: 38px;
 }
 
 .main__btn-to-change {
@@ -116,6 +120,15 @@
   text-decoration: underline;
   margin-left: 60px;
   cursor: pointer;
+}
+
+.main__btn-to-change:hover {
+  text-decoration: none;
+}
+
+.main__money-text {
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .main__money {
@@ -137,6 +150,7 @@
 }
 
 .footer__btn1 {
+  padding: 15px 0;
   text-align: center;
   color: white;
   font-size: 16px;
@@ -144,9 +158,14 @@
   font-weight: 700;
   border: 0;
   background-color: #3829e0;
-  border-radius: 2%;
+  border-radius: 12px 12px 12px 12px;
   cursor: pointer;
   margin-bottom: 10px;
+  border: 1px solid white;
+}
+
+.footer__btn1:hover {
+  background-color: #8b82ed;
 }
 
 .footer__btn2 {
@@ -161,4 +180,203 @@
   border-radius: 1%;
   cursor: pointer;
   margin-bottom: 40px;
+  padding: 15px 0;
+}
+
+@media (max-width: 1024px) {
+  .body__class {
+    min-width: 90%;
+  }
+  .main__heading {
+    font-size: 22px;
+  }
+  .main__article {
+    font-size: 20px;
+  }
+  .main__footer-on-main {
+    font-size: 8px;
+    margin: 0 5px 20px 5px;
+  }
+  .main__img {
+    height: 36px;
+  }
+  .main__money-text {
+    font-size: 18px;
+  }
+  .main__money {
+    font-size: 16px;
+  }
+  .main__btn-to-change {
+    font-size: 16px;
+    margin-left: 5px;
+  }
+  .footer__btn1 {
+    font-size: 16px;
+  }
+  .footer__btn2 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 540px) {
+  .body__class {
+    min-width: 90%;
+  }
+  .main__heading {
+    font-size: 22px;
+  }
+  .main__article {
+    font-size: 20px;
+  }
+  .main__footer-on-main {
+    font-size: 8px;
+    margin: 0 5px 20px 5px;
+  }
+  .main__img {
+    height: 36px;
+  }
+  .main__money-text {
+    font-size: 18px;
+  }
+  .main__money {
+    font-size: 16px;
+  }
+  .main__btn-to-change {
+    font-size: 16px;
+    margin-left: 5px;
+  }
+  .footer__btn1 {
+    font-size: 16px;
+  }
+  .footer__btn2 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 414px) {
+  .body__class {
+    min-width: 90%;
+  }
+  .main__heading {
+    font-size: 22px;
+  }
+  .main__article {
+    font-size: 20px;
+  }
+  .main__footer-on-main {
+    font-size: 8px;
+    margin: 0 5px 20px 5px;
+  }
+  .main__img {
+    height: 36px;
+  }
+  .main__money-text {
+    font-size: 16px;
+  }
+  .main__btn-to-change {
+    font-size: 16px;
+    margin-left: 5px;
+  }
+  .footer__btn1 {
+    font-size: 16px;
+  }
+  .footer__btn2 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 411px) {
+  .body__class {
+    min-width: 90%;
+  }
+  .main__heading {
+    font-size: 22px;
+  }
+  .main__article {
+    font-size: 20px;
+  }
+  .main__footer-on-main {
+    font-size: 8px;
+    margin: 0 5px 20px 5px;
+  }
+  .main__img {
+    height: 36px;
+  }
+  .main__money-text {
+    font-size: 16px;
+  }
+  .main__btn-to-change {
+    font-size: 16px;
+    margin-left: 5px;
+  }
+  .footer__btn1 {
+    font-size: 16px;
+  }
+  .footer__btn2 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 360px) {
+  .body__class {
+    min-width: 90%;
+  }
+  .main__heading {
+    font-size: 16px;
+  }
+  .main__article {
+    font-size: 12px;
+  }
+  .main__footer-on-main {
+    font-size: 8px;
+    margin: 0 5px 20px 5px;
+  }
+  .main__img {
+    height: 36px;
+  }
+  .main__money-text {
+    font-size: 16px;
+  }
+  .main__btn-to-change {
+    font-size: 16px;
+    margin-left: 5px;
+  }
+  .footer__btn1 {
+    font-size: 16px;
+  }
+  .footer__btn2 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 280px) {
+  .body__class {
+    min-width: 90%;
+  }
+  .main__heading {
+    font-size: 16px;
+  }
+  .main__article {
+    font-size: 12px;
+  }
+  .main__footer-on-main {
+    font-size: 8px;
+    margin: 0 3px 20px 3px;
+  }
+  .main__img {
+    height: 36px;
+  }
+  .main__money-text {
+    font-size: 16px;
+  }
+  .main__btn-to-change {
+    font-size: 16px;
+    margin-left: 2px;
+  }
+  .footer__btn1 {
+    font-size: 16px;
+  }
+  .footer__btn2 {
+    font-size: 16px;
+  }
 }
