--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,8 +14,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    line-height: 100%;
-    text-align: center;
     background-color: hsl(225, 100%, 98%);
 
 
@@ -47,17 +45,19 @@
 
     &__heading {
         align-self: center;
-        margin: 20px 0;
-        font-weight: bold;
-        font-size: 32px;
+        margin: 40px 0;
+        font-weight: 700;
+        font-size: 28px;
     }
 
     &__article {
+        font-size: 16px;
+        font-weight: 500;
         align-self: center;
         text-align: center;
         width: 60%;
         color: gray;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 
     &__footer-on-main {
@@ -71,7 +71,11 @@
     &__price-center {
         display: flex;
         flex-direction: column;
-        margin: 0 20px;
+        margin: 0 30px;
+    }
+
+    &__img {
+        height: 38px;
     }
 
     &__btn-to-change {
@@ -82,6 +86,15 @@
         text-decoration: underline;
         margin-left: 60px;
         cursor: pointer;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+
+    &__money-text {
+        font-size: 16px;
+        font-weight: 700;
     }
 
     &__money {
@@ -96,7 +109,7 @@
     align-items: center;
 
     &__btn1 {
-        // flex-shrink: 1;
+        padding: 15px 0;
         text-align: center;
         color: white;
         font-size: 16px;
@@ -104,9 +117,14 @@
         font-weight: 700;
         border: 0;
         background-color: hsl(245, 75%, 52%);
-        border-radius: 2%;
+        border-radius: 12px 12px 12px 12px;
         cursor: pointer;
         margin-bottom: 10px;
+        border: 1px solid white;
+
+        &:hover {
+            background-color: hsl(245, 75%, 72%);
+        }
 
     }
 
@@ -122,5 +140,297 @@
         border-radius: 1%;
         cursor: pointer;
         margin-bottom: 40px;
+        padding: 15px 0;
+    }
+}
+
+@media(max-width:1024px) {
+    .body {
+        &__class {
+            min-width: 90%;
+            // max-height: 90%;
+        }
+    }
+
+    .main {
+        &__heading {
+            font-size: 22px;
+        }
+
+        &__article {
+            font-size: 20px;
+        }
+
+        &__footer-on-main {
+            font-size: 8px;
+            margin: 0 5px 20px 5px;
+        }
+
+        &__img {
+            height: 36px;
+        }
+
+        &__money-text {
+            font-size: 18px;
+        }
+
+        &__money {
+            font-size: 16px;
+        }
+
+        &__btn-to-change {
+            font-size: 16px;
+            margin-left: 5px;
+        }
+    }
+
+    .footer {
+        &__btn1 {
+            font-size: 16px;
+        }
+
+        &__btn2 {
+            font-size: 16px;
+        }
+    }
+}
+
+@media(max-width:540px) {
+    .body {
+        &__class {
+            min-width: 90%;
+            // max-height: 90%;
+        }
+    }
+
+    .main {
+        &__heading {
+            font-size: 22px;
+        }
+
+        &__article {
+            font-size: 20px;
+        }
+
+        &__footer-on-main {
+            font-size: 8px;
+            margin: 0 5px 20px 5px;
+        }
+
+        &__img {
+            height: 36px;
+        }
+
+        &__money-text {
+            font-size: 18px;
+        }
+
+        &__money {
+            font-size: 16px;
+        }
+
+        &__btn-to-change {
+            font-size: 16px;
+            margin-left: 5px;
+        }
+    }
+
+    .footer {
+        &__btn1 {
+            font-size: 16px;
+        }
+
+        &__btn2 {
+            font-size: 16px;
+        }
+    }
+}
+
+
+@media(max-width:414px) {
+    .body {
+        &__class {
+            min-width: 90%;
+            // max-height: 90%;
+        }
+    }
+
+    .main {
+        &__heading {
+            font-size: 22px;
+        }
+
+        &__article {
+            font-size: 20px;
+        }
+
+        &__footer-on-main {
+            font-size: 8px;
+            margin: 0 5px 20px 5px;
+        }
+
+        &__img {
+            height: 36px;
+        }
+
+        &__money-text {
+            font-size: 16px;
+        }
+
+        &__btn-to-change {
+            font-size: 16px;
+            margin-left: 5px;
+        }
+    }
+
+    .footer {
+        &__btn1 {
+            font-size: 16px;
+        }
+
+        &__btn2 {
+            font-size: 16px;
+        }
+    }
+}
+
+@media(max-width:411px) {
+    .body {
+        &__class {
+            min-width: 90%;
+            // max-height: 90%;
+        }
+    }
+
+    .main {
+        &__heading {
+            font-size: 22px;
+        }
+
+        &__article {
+            font-size: 20px;
+        }
+
+        &__footer-on-main {
+            font-size: 8px;
+            margin: 0 5px 20px 5px;
+        }
+
+        &__img {
+            height: 36px;
+        }
+
+        &__money-text {
+            font-size: 16px;
+        }
+
+        &__btn-to-change {
+            font-size: 16px;
+            margin-left: 5px;
+        }
+    }
+
+    .footer {
+        &__btn1 {
+            font-size: 16px;
+        }
+
+        &__btn2 {
+            font-size: 16px;
+        }
+    }
+}
+
+@media(max-width:360px) {
+    .body {
+        &__class {
+            min-width: 90%;
+            // max-height: 90%;
+        }
+    }
+
+    .main {
+        &__heading {
+            font-size: 16px;
+        }
+
+        &__article {
+            font-size: 12px;
+        }
+
+        &__footer-on-main {
+            font-size: 8px;
+            margin: 0 5px 20px 5px;
+        }
+
+        &__img {
+            height: 36px;
+        }
+
+        &__money-text {
+            font-size: 16px;
+        }
+
+        &__btn-to-change {
+            font-size: 16px;
+            margin-left: 5px;
+        }
+    }
+
+    .footer {
+        &__btn1 {
+            font-size: 16px;
+        }
+
+        &__btn2 {
+            font-size: 16px;
+        }
+    }
+}
+
+@media(max-width:280px) {
+    .body {
+        &__class {
+            min-width: 90%;
+            // max-height: 90%;
+        }
+    }
+
+    .main {
+        &__heading {
+            font-size: 16px;
+        }
+
+        &__article {
+            font-size: 12px;
+        }
+
+        &__footer-on-main {
+            font-size: 8px;
+            margin: 0 3px 20px 3px;
+        }
+
+        &__img {
+            height: 36px;
+        }
+
+        &__money-text {
+            font-size: 16px;
+        }
+
+        &__btn-to-change {
+            font-size: 16px;
+            margin-left: 2px;
+        }
+    }
+
+    .footer {
+        &__btn1 {
+            font-size: 16px;
+        }
+
+        &__btn2 {
+            font-size: 16px;
+        }
     }
 }
